fix(KAPH-274): fix horizontally squashed radio issue

--- a/css/iframeui.css
+++ b/css/iframeui.css
@@ -12626,8 +12626,7 @@ fieldset.valid input[type=checkbox] + label:before {
 }
 
 fieldset.valid input[type=radio] + label:before {
-    border-color: #060 !important;
-    border: 0px !important;
+    border: 2px solid #000 !important;
 }
 
 .achieveforms-container .all-sections .field .fieldContent fieldset.fieldInput .checkbox-wrapper .check2:focus + label:before, .achieveforms-container .all-sections .field .fieldContent fieldset.fieldInput .checkbox-wrapper .radio2:focus + label:before, .achieveforms-container .all-sections .field .fieldContent fieldset.fieldInput .radio-wrapper .check2:focus + label:before, .achieveforms-container .all-sections .field .fieldContent fieldset.fieldInput .radio-wrapper .radio2:focus + label:before {
@@ -12660,7 +12659,7 @@ fieldset.valid input[type=radio] + label:before {
 
 }
 
-.gds-select [type=checkbox] + label::before, .gds-select [type=radio] + label::before {
+.gds-select [type=checkbox] + label::before {
     border-radius: 0px;
     content: "";
     border: 2px solid #000 !important;
@@ -12674,11 +12673,10 @@ fieldset.valid input[type=radio] + label:before {
 
 .gds-select [type=radio] + label::before {
     content: "";
-    border: 2px solid #000;
+    border: 2px solid #000 !important;
     background: transparent;
-    width: 35px;
-    height: 35px;
-    /* position: absolute;*/
+    width: 25px;
+    height: 25px;
     top: 5px;
     left: 0;
     border-radius: 50%;
@@ -12704,26 +12702,6 @@ fieldset.valid input[type=radio] + label:before {
     zoom: 1;
     filter: alpha(opacity=0);
     opacity: 0;
-}
-
-.gds-select [type=radio] + label::after {
-    content: "";
-    border: 10px solid #000;
-    background: #fff !important;
-    width: 0px;
-    height: 0px;
-    position: absolute;
-    top: 12px;
-    left: 8px;
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    zoom: 1;
-    filter: alpha(opacity=0);
-    opacity: 0;
-    border-radius: 50%;
 }
 
 .gds-select:checked + label::after {
